Testing search via RSS
Working on #2 to find a good search option.

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 
 # Site settings
 title: "Scholars' Lab"
+name: "Scholars' Lab"
 email: scholarslab@virginia.edu
 description: "The Scholars' Lab"
 baseurl: "" # the subpath of your site, e.g. /blog
