--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ description: "The Scholars’ Lab"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: scholarslab
+permalink: /:categories/:title/
 
 # Build settings
 markdown: kramdown
