Keep local links working on live site
{{site.url}} now = scholarslab.github.io/scholarslab.org

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ name: "Scholars’ Lab"
 email: scholarslab@virginia.edu
 description: "The Scholars’ Lab"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "/scholarslab.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: scholarslab
 permalink: /:categories/:title/
 
