--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ before_script:
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script: ./script/cibuild
+script:
+  - bundle exec jekyll build
+  - bundle exec htmlproofer ./_site --disable-external
 
 # branch whitelist, only for GitHub Pages
 branches:
