--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: "Scholars’ Lab"
 name: "Scholars’ Lab"
 email: scholarslab@virginia.edu
 description: "The Scholars’ Lab"
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/scholarslab.org" # the subpath of your site, e.g. /blog
 url: "/scholarslab.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: scholarslab
 permalink: /:categories/:title/
