--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ before_script:
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script:
-  - bundle exec jekyll build
-  - bundle exec htmlproofer ./_site --disable-external
+
+script: script/cibuild
+  # - bundle exec jekyll build
+  # - bundle exec htmlproofer ./_site --disable-external
+  # - bundle exec htmlproofer ./_site --http-status-ignore "999" --url-swap "https?\:\/\/(127\.0\.0\.1\:4000|localhost\:4000):" --check-html
 
 # branch whitelist, only for GitHub Pages
 branches:
