--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: ruby
+cache:
+  - bundler
+  - directories:
+    - $TRAVIS_BUILD_DIR/tmp/.htmlproofer
 rvm:
 - 2.4.1
 
@@ -9,9 +13,7 @@ before_script:
 # the `install` step will run `bundle install` by default.
 
 script: script/cibuild
-  # - bundle exec jekyll build
-  # - bundle exec htmlproofer ./_site --disable-external
-  # - bundle exec htmlproofer ./_site --http-status-ignore "999" --url-swap "https?\:\/\/(127\.0\.0\.1\:4000|localhost\:4000):" --check-html
+
 
 # branch whitelist, only for GitHub Pages
 branches:
