Add starter kits to collections in _config.yml
-Or register the directory, rather
-Used same settings as those for lab, people, & research

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,9 @@ collections:
   lab:
     output: true
     permalink: /:collection/:name/
+  starter-kits:
+    output: true
+    permalink: /:collection/:name/
 
 header_pages:
   - about.md
