Remove 2nd exclude statement in _config.yml
-Seems like it was canceling out the previous exclude statement

-The second one just had 'vendor' so added that to first statement

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ plugins:
 exclude:
   - Gemfile
   - Gemfile.lock
+  - vendor
 collections:
   people:
     output: true
@@ -43,8 +44,6 @@ header_pages:
   - research.md
   - lab.md
   - search.html
-
-exclude: [vendor]
 
 defaults:
   - scope:
