Add events as collection in config

--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,9 @@ collections:
   starter-kits:
     output: true
     permalink: /:collection/:name/
+  events:
+    output: true
+    permalink: /:collection/:name/
 
 header_pages:
   - about.md
