--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ exclude:
   - vendor
   - docs
   - theme-testing
-  - _posts # temporary! significantly reduces build time for theme testing
+#  - _posts # temporary! significantly reduces build time for theme testing
 collections:
   people:
     output: true
