Exclude Python scripts from build

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ exclude:
   - docs
   - theme-testing
   - _posts # temporary! significantly reduces build time for theme testing
+  - assets/python # helper scripts to manipulate HTML/CSS, not used in build
 collections:
   people:
     output: true
