Register 'todo' collection to track progress on non-page objects

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,9 @@ collections:
   events:
     output: true
     permalink: /:collection/:name/
+  todo:
+    output: true
+    permalink: /:collection/:name/
 
 header_pages:
   - about.md
