Un-exclude blog posts before create pull request

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ exclude:
   - vendor
   - docs
   - theme-testing
-  - _posts # temporary! significantly reduces build time for theme testing
+#  - _posts # temporary! significantly reduces build time for theme testing
   - assets/python # helper scripts to manipulate HTML/CSS, not used in build
 collections:
   people:
