--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ exclude:
   - Gemfile.lock
   - vendor
   - docs
+  - node_modules
   - theme-testing
   - _posts # temporary! significantly reduces build time for theme testing
   - assets/python # helper scripts to manipulate HTML/CSS, not used in build
