--- a/_data/research.yml
+++ b/_data/research.yml
@@ -1,43 +1,43 @@
 bibliographic-society-of-virginia:
 - color: hsl(33, 8%, 26%)
   color-half: hsla(33, 8%, 26%, .5)
-  color-bg: hsla(229, 9%, 51%, .2)
+  color-bg: hsla(13, 18%, 55%, .2) # hsla(229, 9%, 51%, .2)
 
 
 collective-biographies-of-women:
 - color: hsl(24, 24%, 84%)
   color-half: hsla(24, 24%, 84%, .5)
-  color-bg: hsla(7,25%,49%,.2)
+  color-bg: hsla(25, 42%, 88%, .7) # hsla(7,25%,49%,.2) 
 
 
 faulkner-at-virginia-an-audio-archive:
 - color: hsl(69, 3%, 49%)
   color-half: hsl(69, 3%, 49%, .5)
-  color-bg: hsla(71, 35%, 50%, .15)
+  color-bg: hsla(71, 35%, 50%, .15) # still good
 
 
 for-better-for-verse:
 - color: hsl(20, 13%, 14%)
   color-half: hsla(20, 13%, 14%, .5)
-  color-bg: hsla(25,24%,19%,.3)
+  color-bg: hsla(23, 24%, 19%, .2) # hsla(25,24%,19%,.3)
 
 
 geoloader:
 - color: hsl(0, 0%, 16%)
   color-half: hsla(0, 0%, 16%, .5)
-  color-bg: hsla(301, 73%, 16%, .15)
+  color-bg: hsl(0, 0%, 93%) # hsla(301, 73%, 16%, .15)
 
 
 jeffersons-notes-on-the-state-of-virginia:
 - color: hsl(225, 3%, 26%)
   color-half: hsla(225, 3%, 26%, .5)
-  color-bg: hsla(192, 69%, 69%, .3)
+  color-bg: hsla(291, 4%, 66%, .4) # hsla(192, 69%, 69%, .3)
 
 
 latvian-dainas:
 - color: hsl(0, 0%, 67%)
   color-half: hsla(0, 0%, 67%, .5)
-  color-bg: hsla(19, 69%, 46%, .15)
+  color-bg: hsla(19, 49%, 66%, 0.15) # hsla(19, 69%, 46%, .15)
 
 
 mapping-the-catalogue-of-ships:
@@ -49,55 +49,55 @@ mapping-the-catalogue-of-ships:
 neatline:
 - color: hsl(268, 47%, 34%)
   color-half: hsla(268, 47%, 34%, .5)
-  color-bg: hsla(268, 47%, 34%, .2)
+  color-bg: hsla(300, 8%, 75%, .35) # hsla(268, 47%, 34%, .2)
 
 
 omeka-plugins:
 - color: hsl(268, 47%, 34%)
   color-half: hsla(268, 47%, 34%, .5)
-  color-bg: hsla(276, 51%, 38%, .25)
+  color-bg: hsla(290, 49%, 27%, .15) # hsla(276, 51%, 38%, .25)
 
 
 praxis-program:
 - color: hsl(53, 10%, 32%)
   color-half: hsla(53, 10%, 32%, .5)
-  color-bg: hsla(37, 91%, 74%, .2)
+  color-bg: hsla(37, 91%, 74%, .2) # new color, didn't mark old one
 
 
 presidents-commission-on-slavery-and-the-university:
 - color: hsl(100, 1%, 60%)
   color-half: hsla(100, 1%, 60%, .5)
-  color-bg: hsla(232, 88%, 32%, .15)
+  color-bg: hsla(71, 8%, 72%, .4) # hsla(232, 88%, 32%, .15)
 
 
 project-blacklight:
 - color: hsl(310, 67%, 11%)
   color-half: hsl(310, 67%, 11%, .4)
-  color-bg: hsl(240,100%,16%,.3)
+  color-bg: hsla(21, 97%, 37%, .1) # hsl(240,100%,16%,.3)
 
 
 salem-witch-trials:
 - color: hsl(26, 29%, 30%)
   color-half: hsla(26, 29%, 30%, .5)
-  color-bg: hsla(0, 20%, 49%, .2)
+  color-bg: hsla(31, 57%, 42%, .15) # hsla(0, 20%, 49%, .2)
 
 
 solrmarc:
 - color: hsl(18, 49%, 33%)
   color-half: hsl(18, 49%, 33%, .5)
-  color-bg: hsla(200,82%,47%,.2)
+  color-bg: hsla(29, 72%, 49%, 0.15) # hsla(200,82%,47%,.2)
 
 
 spatial-search-and-delivery:
-- color: "hsl(51, 9%, 61%)"
+- color: hsl(51, 9%, 61%)
   color-half: hsla(51, 9%, 61%, .5)
-  color-bg: hsla(51, 9%, 61%, .3)
+  color-bg: hsla(52, 22%, 81%, .5) # hsla(51, 9%, 61%, .3)
 
 
 speaking-in-code:
 - color: hsl(53, 58%, 44%)
   color-half: hsla(53, 58%, 44%, .5)
-  color-bg: hsl(66, 73%, 51%, .15)
+  color-bg: hsl(66, 73%, 51%, .15) # hsl(66, 73%, 51%, .15)
 
 
 the-falmouth-project:
@@ -109,7 +109,7 @@ the-falmouth-project:
 the-mind-is-a-metaphor:
 - color: hsl(225, 2%, 51%)
   color-half: hsla(225, 2%, 51%, .5)
-  color-bg: hsla(225, 2%, 51%, .4)
+  color-bg: hsla(225, 2%, 51%, .2) # hsla(225, 2%, 51%, .4)
 
 
 the-scholars-lab:
@@ -121,7 +121,7 @@ the-scholars-lab:
 the-university-of-virginia-art-museum-numismatic-collection:
 - color: hsl(43, 32%, 44%)
   color-half: hsla(43, 32%, 44%, .5)
-  color-bg: hsla(44,70%,69%,.3)
+  color-bg: hsla(44,70%,69%,.15) # hsla(44,70%,69%,.3)
 
 
 thl-place-dictionary:
