Update person URL formatting: use slug, not slugified filename
- Had default ":name", which overrides more specific values

- Also gave James his middle initial back, since it now works

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ exclude:
 collections:
   people:
     output: true
-    permalink: /:collection/:name/
+    permalink: /:collection/:slug/
   research:
     output: true
     permalink: /:collection/:name/
