Additional work on Open Graph metadata.
- Adds front matter defaults for page and post types. Creates a
page.ogtype default for each. Static pages receive a 'website' value,
while blog posts receive an 'article' value.
- Adds `excerpt` to frontmatter for several pages, to demonstrate how it
would work in a rich object; Checks for that value in displaying the
og:description element.
- Adds title distinction in OG elements:
  - og:title for the page/post title.
  - og:site_title for the broader site title.
- Prepends absolute URL to og:url element.
- Some syntax cleanup:
  - Removes whitespace and line breaks around `fulltitle` variable.
  - Removes trailing `/` on OG elements, for consistency with the rest
of the codebase.

Refs #15.

--- a/_config.yml
+++ b/_config.yml
@@ -56,3 +56,15 @@ defaults:
       path: "pages"
     values:
       order: 10
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      is_post: true
+      og_type: "article"
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      is_page: true
+      og_type: "website"
