--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ exclude:
   - node_modules
   - theme-testing
 #  - _posts # temporary! significantly reduces build time for theme testing
+#  - _people # temporary
   - assets/python # helper scripts to manipulate HTML/CSS, not used in build
 collections:
   people:
