--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-cli": "^2.0.1",
     "gulp-concat": "^2.6.1",
+    "gulp-insert": "^0.5.0",
     "gulp-uglify-es": "^1.0.4"
   }
 }
