--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ collections:
   events:
     output: true
     permalink: /:collection/:name/
+  spaces: # output false
 
 header_pages:
   - about.md
