--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ name: "Scholars’ Lab"
 email: scholarslab@virginia.edu
 description: "The Scholars’ Lab"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://maybe.scholarslab.org" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://scholarslab.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: scholarslab
-permalink: /:year/:month/:day/:title/
+permalink: /blog/:title/
 timezone: America/New_York
 # Build settings
 analytics: false
