Cleaning things up

--- a/_data/student-projects.yml
+++ b/_data/student-projects.yml
@@ -94,7 +94,7 @@
   image_path: 
   description: "Like the previous cohort, this year's group took the concept of time as their provocation, but they took it in a wildly different direction. Reflecting broadly on how the Kardashian family pervades our present moment, Dash-Amerikan uses variety of digital humanities methodologies to interrogate their social media ecologies. Assembling and topic modeling a vast archive of twitter data and episode transcripts, the cohort produced a lengthy digital essay that sits at the intersections of media studies, digital humanities, and public humanities." 
   posts: 
-- title: "UVA Reveal: Augmenting the University"
+- title: "UVA Reveal"
   years: 2017-2018
   student: Monica Blair, Ankita Chakrabarti, Victoria Clark, Tanner Greene, Christian Howard, Spyros Simotas
   type: Praxis Program
