Update Shane project

--- a/_data/student-projects.yml
+++ b/_data/student-projects.yml
@@ -14,7 +14,7 @@
   image_path: 
   description: "Julia's dissertation research investigates the ruins of a 19th century sugar estate, the material culture excavated from the laborers’ village on the plantation, and colonial archival records inside Bras d’Eau National park, Mauritius. During her DH fellowship, she focused on reworking the data she had collected, including maps of archaeological ruins, sketches from excavations and of artifacts collected, and extensive artifact catalogues. Recreating the material world through digital mediums such as ArcGIS, Adobe Illustrator and 3D printing allowed her to better understand how the daily activities of indentured women, men, and children shaped the cultural and environmental landscape in colonial Mauritius and fit more broadly in Indian Ocean World networks."
   posts: []
-- title: 
+- title: "Kingdom of Code: Cryptography and the New Privacy, 1975-1993"
   years: 2016-2017
   student: Shane Lin
   type: Graduate Fellow
