Add digital skriker to the student projects archive page

--- a/_data/student-projects.yml
+++ b/_data/student-projects.yml
@@ -1,3 +1,11 @@
+- title: Digital Skriker
+  years: 2018-2019
+  student: Kelli Shermeyer
+  type: Graduate Fellow
+  url: 
+  image_path: 
+  description: '"Digital Skriker" explores both the theoretical cruxes and archival possibilities enabled by robust and increasingly accessible motion capture and virtual reality technologies using Caryl Churchill’s play, The Skriker (1994) as a case study. I’m interested not only in how these technologies might change the way we think about documenting stage movement and gesture, but also how they may enable new modes of performance, using "digital" space and nonhuman  actors as part of an immersive and/or site-specific theatre practice.'
+  posts: ["starting-out-on-the-right-foot-(part-two)","starting-off-on-the-right-foot-part-one"]
 - title: Measured Unrest in the Poetry of the Black Arts Movement
   years: 2017-2018
   student: Ethan Reed
