Add praxis  project

--- a/_data/student-projects.yml
+++ b/_data/student-projects.yml
@@ -1,3 +1,11 @@
+- title: Public Domain Toolkit
+  years: 2018-2019
+  student: [Catherine Addington, Cho Jiang, Emily Mellen, Eleanore Neumann, Mathilda Shepard, Chris Whitehead]
+  type: Praxis Program
+  url: 
+  image_path: 
+  description: 'The 2018-2019 Praxis cohort is working on a project that engages with the ways in which copyright and the public domain intersect with scholarly production. Stay tuned for more! And, in the meantime, enjoy the fact that new works entered the public domain on January 1st, 2019 for the first time in over twenty years.'
+  posts: ["a-toolkit-the-public-domain","building-ourselves-up-to-build-things"]
 - title: Digital Skriker
   years: 2018-2019
   student: Kelli Shermeyer
