--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ name: "Scholars’ Lab"
 email: scholarslab@virginia.edu
 description: "The Scholars’ Lab"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://scholarslab.org" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://scholarslab.lib.virginia.edu" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: scholarslab
 permalink: /blog/:title/
 timezone: America/New_York
