Update unclosure description

--- a/_data/student-projects.yml
+++ b/_data/student-projects.yml
@@ -1,10 +1,10 @@
-- title: D&ecirc;mos
+- title: Unclosure
   years: 2018-2019
   student: [Catherine Addington, Cho Jiang, Emily Mellen, Eleanore Neumann, Mathilda Shepard, Chris Whitehead]
   type: Praxis Program
-  url: 
+  url: http://unclosure.scholarslab.org/
   image_path: 
-  description: 'In observation of the [expansion of the public domain in 2019](https://copyright.library.virginia.edu/public-domain/), our project examines how U.S. copyright law interacts with digital research and pedagogy. Working with Robert Frost’s New Hampshire (1923), we will present a series of tutorials that demonstrate how to use a public domain work in order to empower our audience to understand, transform, and intervene in the range of material now available online.'
+  description: 'In observation of the [expansion of the public domain in 2019](https://copyright.library.virginia.edu/public-domain/), <i>Unclosure: An Act for the Encouragement of Learning</i> examines how U.S. copyright law interacts with digital research and pedagogy. Working with Robert Frost’s New Hampshire (1923), the project presents a series of tutorials that demonstrate how to use a public domain work in order to empower our audience to understand, transform, and intervene in the range of material now available online.'
   posts: ["a-toolkit-the-public-domain","building-ourselves-up-to-build-things"]
 - title: Digital Skriker
   years: 2018-2019
