Add Leigh Miller to student archive

--- a/_data/student-projects.yml
+++ b/_data/student-projects.yml
@@ -1,3 +1,11 @@
+- title: "Being and Place in(between) Video Game Worlds"
+  years: 2018-2019
+  student: Leigh Miller
+  type: Graduate Fellow
+  url: 
+  image_path: 
+  description: The digital component of this dissertation is an interactive, 3D diagram and proof of concept tool used for the study of place making in video game space. Using Unity and photogrammetry, the digital tool organizes video game play footage into clusters of visual information, organized into categories according to spatial logics, such as time and materiality. These clusters will be linked visual “trajectories” in space--lines that connect spatial typologies that I identify as critical to the experience of game space, such as maps, load screens, and moments of in-game travel. The trajectories will allow the user to see and interact with my data sets. In this way, the diagram creates a virtual place in which ontological concerns about how we think of game space as a place on its own terms can be explored spatially by gamers, non-gamers, architects and theoreticians alike. 
+  posts: []
 - title: Unclosure
   years: 2018-2019
   student: [Catherine Addington, Cho Jiang, Emily Mellen, Eleanore Neumann, Mathilda Shepard, Chris Whitehead]
