--- a/_data/student-projects.yml
+++ b/_data/student-projects.yml
@@ -1,5 +1,13 @@
+- title: "Gertrude Stein’s Grammars"
+  years: 2019-2020
+  student: Jordan Buysse
+  type: Graduate Fellow
+  url: 
+  image_path: 
+  description: Jordan's DH fellowship research applies recent tools and packages for natural language processing to Gertrude Stein’s 1931 book How to Write. His particular focus is grammar, a subject that fascinates Stein and animates some of her most inventive and challenging prose. While many text analytic approaches to literature center individual words as the primary unit of analysis, Stein’s proud self-identification as a “grammarian” demands an approach honed in on the connections between words at the clause and sentence level. Apart from the specific research case of Stein, the project will also consider some practical ways that researchers can search for, sift through, and otherwise explore phrase-level units of language. 
+  posts: []
 - title: "Being and Place in(between) Video Game Worlds"
-  years: 2018-2019
+  years: 2019-2020
   student: Leigh Miller
   type: Graduate Fellow
   url: 
