--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "moment": "^2.24.0"
   },
   "devDependencies": {
-    "gulp": "^4.0.0",
+    "extend": "^3.0.2",
+    "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
-    "gulp-cli": "^2.0.1",
+    "gulp-cli": "^2.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-insert": "^0.5.0",
-    "gulp-uglify-es": "^1.0.4",
-    "extend": "^3.0.2"
+    "gulp-uglify-es": "^1.0.4"
   }
 }
