--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ exclude:
 #  - _posts # temporary! significantly reduces build time for theme testing
 #  - _people # temporary
   - assets/python # helper scripts to manipulate HTML/CSS, not used in build
+  - site
 
 collections_dir: collections
 collections:
