Style and template updates for navigation.
Begins work on creating a two-tiered navigation
display. Current approach includes the following:

- Two new sections in the `_config.yml` to manage
  the contents of various navigation.
- Updates to the `navbar.html` template to use
  navigation data in the config.
- Less-than-ideal approach to visually indicate
  which navigation links are "current".

This commit only implements a secondary navigation
for the Opportunities/for-students section of the
site.

--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,7 @@ header_pages:
   - work.md
   - search.html
 
+
 defaults:
   - scope:
       path: "assets/img"
@@ -70,3 +71,21 @@ defaults:
     values:
       order: 10
       og_type: "website"
+
+## Nested list for primary navigation.
+primary-navigation:
+  - label: "Opportunities"
+    url: "for-students"
+  - label: "Code + Design"
+    url: "research-and-development"
+  - label: "Makerspace"
+    url: "makerspace"
+  - label: "Spatial Tech"
+    url: "spatial-technologies"
+  - label: "Our Work"
+    url: "work"
+
+for-students-navigation:
+  - "dh_fellows.md"
+  - "praxis.md"
+  - "lami.md"
